exports[`Points [common] example testing should match snapshot for basic 1`] = `
<svg
  height={400}
  width={1000}>
  <g
    transform="translate(10, 10)">
    <Points
      colorOffset={0}
      data={
        Array [
          Object {
            "x": "one",
            "y0": 4,
            "y1": 5,
            "y2": 6,
            "y3": 7,
          },
          Object {
            "x": "two",
            "y0": 3,
            "y1": 4,
            "y2": 5,
            "y3": 6,
          },
          Object {
            "x": "three",
            "y0": 2,
            "y1": 3,
            "y2": 4,
            "y3": 5,
          },
          Object {
            "x": "four",
            "y0": 1,
            "y1": 2,
            "y2": 3,
            "y3": 4,
          },
          Object {
            "x": "five",
            "y0": 2,
            "y1": 3,
            "y2": 4,
            "y3": 5,
          },
          Object {
            "x": "six",
            "y0": 3,
            "y1": 4,
            "y2": 5,
            "y3": 6,
          },
          Object {
            "x": "seven",
            "y0": 4,
            "y1": 5,
            "y2": 6,
            "y3": 7,
          },
        ]
      }
      hasStroke={true}
      isStacked={false}
      palette={
        Array [
          "color-chart-0",
          "color-chart-1",
          "color-chart-2",
          "color-chart-3",
          "color-chart-4",
          "color-chart-5",
        ]
      }
      xField="x"
      xScale={[Function]}
      yFields={
        Array [
          "y0",
          "y1",
          "y2",
          "y3",
        ]
      }
      yScale={[Function]} />
  </g>
</svg>
`;

exports[`Points [common] example testing should match snapshot for custom-colors 1`] = `
<svg
  height={400}
  width={1000}>
  <g
    transform="translate(10, 10)">
    <Points
      colorMap={
        Object {
          "y0": "color-chart-bad",
          "y1": "color-chart-good",
          "y2": "#ff8800",
          "y3": "#abc123",
        }
      }
      colorOffset={0}
      data={
        Array [
          Object {
            "x": "one",
            "y0": 4,
            "y1": 5,
            "y2": 6,
            "y3": 7,
          },
          Object {
            "x": "two",
            "y0": 3,
            "y1": 4,
            "y2": 5,
            "y3": 6,
          },
          Object {
            "x": "three",
            "y0": 2,
            "y1": 3,
            "y2": 4,
            "y3": 5,
          },
          Object {
            "x": "four",
            "y0": 1,
            "y1": 2,
            "y2": 3,
            "y3": 4,
          },
          Object {
            "x": "five",
            "y0": 2,
            "y1": 3,
            "y2": 4,
            "y3": 5,
          },
          Object {
            "x": "six",
            "y0": 3,
            "y1": 4,
            "y2": 5,
            "y3": 6,
          },
          Object {
            "x": "seven",
            "y0": 4,
            "y1": 5,
            "y2": 6,
            "y3": 7,
          },
        ]
      }
      hasStroke={true}
      isStacked={false}
      palette={
        Array [
          "color-chart-0",
          "color-chart-1",
          "color-chart-2",
          "color-chart-3",
          "color-chart-4",
          "color-chart-5",
        ]
      }
      xField="x"
      xScale={[Function]}
      yFields={
        Array [
          "y0",
          "y1",
          "y2",
          "y3",
        ]
      }
      yScale={[Function]} />
  </g>
</svg>
`;
